--- a/style.css
+++ b/style.css
@@ -101,6 +101,8 @@ body {
   background: rgba(255, 255, 255, 0.6);
   border-radius: 10px;
   padding: 3rem;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -116,6 +118,7 @@ body {
   .form {
     width: 100%;
     height: 100%;
+    border-radius: 10px;
   }
 }
 
